--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,4 @@
+/*
 .top-section {
 
     height: 680px;
@@ -100,6 +101,11 @@
         border-radius: 25px 25px 25px 0px;
         width: 90%;
         height: 439px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
         position: relative;
 
@@ -214,7 +220,7 @@
 
     height: 100vh;
 
-    margin-top: 180px;
+    margin-top: 160px;
 }
 
 .middle-section-title {
@@ -285,6 +291,7 @@
     margin-right: 80px;
     margin-top: 40px;
 }
+*/
 
 .listing {
 
@@ -369,16 +376,16 @@
 
     .see-listing {
         background-color: #81AB76;
-        margin-left: 62%;
+        margin-left: 60%;
         margin-top: 10px;
-        width: 45%;
+        width: 40%;
         height: 78px;
         border: none;
         border-radius: 0px 25px 25px 25px;
         font-weight: 600;
 
         i {
-            font-size: 40px;
+            font-size: 30px;
             width: 100%;
             height: 100%;
             display: flex;
@@ -421,286 +428,10 @@
     }
 }
 
-.slider-buttons-content {
-    position: absolute;
-    top: 0;
-    height: 540px;
-    width: 100%;
-}
-
-.slider-buttons {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    .next-left, .next-right{
-        background-color: #D6650F;
-        font-weight: 600;
-        color: #F2F2F2;
-        border-radius: 25px;
-        height: 40px;
-        width: 60px;
-        border: none;
-
-        &:hover {
-            cursor: pointer;
-            background-color: #29272F;
-            transition: 0.2s;
-        }
-    }
-
-    .next-right {
-        &:hover {
-            margin-right: -10px;
-            transition: 0.2s;
-        }
-    }
-
-    .next-left{
-        &:hover {
-            margin-left: -10px;
-            transition: 0.2s;
-        }
-    }
-}
-
-
-/*Top-section Responsive*/
-@media (max-width: 1350px) {
-    
-    .top-section-content-left {
-        .content-image-dividers {
-            .content-left {
-                .left-titles {
-                    font-size: 35px;
-                }
-            }
-        }
-    }
-    
-}
-
-@media (max-width: 1150px) {
-    .top-section {
-        height: 580px;
-    }
-    
-    .top-section-border {
-        width: 90%;
-        padding: 20px;
-    }
-    
-    .top-section-content-left {
-        padding-left: 20px;
-        .content-image-dividers {
-            .content-left {
-                .left-titles {
-                    font-size: 32px;
-                }
-            }
-        }
-    }
-    
-    .top-section-content-right {
-        padding: 20px;    
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        .content-right {
-            padding: 10px;
-            height: 339px;    
-            .right-titles {
-                height: 100px;
-                h3 {
-                    font-size: 18px;
-                }
-                h4 {
-                    font-size: 10px;
-                }
-            }
-    
-            .register-form {
-                height: 73.3%;
-                gap: 20px;
-    
-                .registration-username, .registration-email, .registration-password {
-                    width: 200px;
-                    height: 30px;
-                }
-            }
-        }
-    
-        .content-right::before {
-            height: 58px;
-        }
-    
-        .register-button {
-            background-color: #D6650F;
-            margin-left: 52.5%;
-            margin-top: 2.5%;
-            width: 43%;
-            height: 48px;
-
-        }
-    }
-}
-
-@media (max-width: 755px) {
-    .top-section {
-        height: 480px;
-    }
-    
-    .top-section-border {
-        padding: 10px;
-    }
-    
-    .top-section-content-left {
-        padding-left: 10px;
-        width: 40%;
-        .content-image-dividers {
-            .content-left {
-                .left-titles {
-                    font-size: 25px;
-                }
-            }
-        }
-    }
-    
-    .top-section-content-right {
-        padding: 10px;    
-        width: 55%;
-        .content-right {
-            padding: 10px;
-            height: 300px;    
-            .right-titles {
-                height: 70px;
-                h3 {
-                    font-size: 16px;
-                }
-                h4 {
-                    font-size: 10px;
-                }
-            }
-        }
-    
-        .content-right::before {
-            height: 48px;
-        }
-    
-        .register-button {
-            height: 38px;
-            font-size: 14px;
-        }
-    }
-}
-
-@media (max-width: 650px) {
-
-    .top-section-content-left {
-        .content-image-dividers {
-            .content-left {
-                .left-titles {
-                    font-size: 20px;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 550px) {
-
-    .top-section-content-left {
-        width: 50%;
-        .content-image-dividers {
-            .content-left {
-                .left-titles {
-                    font-size: 20px;
-                }
-            }
-        }
-    }
-
-    .top-section-content-right {
-        width: 45%;
-        .content-right {
-            .register-form {
-    
-                .registration-username, .registration-email, .registration-password {
-                    width: 150px;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 550px) {
-
-    .top-section-content-left {
-        width: 50%;
-        .content-image-dividers {
-            .content-left {
-                .left-titles {
-                    font-size: 20px;
-                }
-            }
-        }
-    }
-
-    .top-section-content-right {
-        width: 45%;
-        .content-right {
-            .register-form {
-    
-                .registration-username, .registration-email, .registration-password {
-                    width: 150px;
-                }
-            }
-        }
-
-        .register-button {
-            font-size: 12px;
-        }
-    }
-}
-
-@media (max-width: 455px) {
-
-    .top-section-content-left {
-        display: none;
-        .content-image-dividers {
-            .content-left {
-                .left-titles {
-                    font-size: 20px;
-                }
-            }
-        }
-    }
-
-    .top-section-content-right {
-        width: 100%;
-        .content-right {
-            .register-form {
-    
-                .registration-username, .registration-email, .registration-password {
-                    width: 150px;
-                }
-            }
-        }
-
-        .register-button {
-            font-size: 12px;
-        }
-    }
-}
-
-
-
 
 /*Middle section responsive*/
 
+/*
 @media (max-width: 1300px) {
     
 .middle-section {
@@ -950,3 +681,4 @@
         }
     }
 }
+*/
