--- a/src/css/listings/all-listings.css
+++ b/src/css/listings/all-listings.css
@@ -1,315 +1,149 @@
-.all-listings-section {
-
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
+.listing {
+    color: #F2F2F2;
+    width: calc(30% - 20px);
     display: flex;
     flex-direction: column;
-}
+    height: 505px;
 
-.listings-top-filters {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-    margin-bottom: 40px;
+    .listing-content {
+        height: 450px;
+        padding: 10px 10px 0px 10px;
+        border-radius: 25px 25px 25px 0px;
+        background-color: #29272f;
+        background-image: url(/media/textures/grain-texture2.png);
+        background-repeat: repeat;
+        background-size: contain;
+        background-size: 100px;
+        position: relative;
 
-    h1 {
-        font-size: 45px;
-        padding-top: 0px;
-        margin-top: 0px;
-    }
-
-    .sort-by-option {
-        height: 50px;
-        width: 80px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: solid 1.5px #29272F;
-        border-radius: 10px;
-
-        .sort-by {
-            background-color: rgba(255, 192, 203, 0);
-            border: none;
-            font-family: "Libre Bodoni", serif;
-            height: 50px;
-            width: 70px;    
-            option {
-                font-family: "Libre Bodoni", serif;
-            }
-        }
-    }
-}
-
-.tag-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 40px;
-    height: 30px;
-    width: 100%;
-
-    .popular-tags {
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
-        width: 100%;
-
-        .tag {
-            height: 100%;
-            width: auto;
-            padding: 5px;
-            padding-left: 7px;
-            padding-right: 7px;
-            border: solid 1.5px #29272F;
-            border-radius: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 16px;
-
-            &:hover {
-                cursor: pointer;
-                background-color: #D6650F;
-                color: #F2F2F2;
-                border-color: #D6650F;
-                transition: 0.2s;
-            }
-        }
-    }
-
-    .default-tags {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 50px;
-        width: 90px;
-
-        .reset-tags {
-            height: 35px;
-            width: 80px;
-            padding: 5px;
-            border: solid 1.5px #29272F;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 16px;
-            font-family: "Libre Bodoni", serif;
-
-            &:hover {
-                cursor: pointer;
-                transition: 0.2s;
-                background-color: #29272F;
-                color: #F2F2F2;
-            }
-        }
-    }
-}
-
-.all-listings {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: start;
-    justify-content: space-between;
-    gap: 40px;
-    width: 100%;
-    margin-top: 40px;
-    margin-bottom: 0;
-    padding-bottom: 0;
-
-    .listing {
-        color: #F2F2F2;
-        width: calc(30% - 20px);
-        display: flex;
-        flex-direction: column;
-        height: 505px;
-
-        .listing-content {
-            height: 450px;
-            padding: 10px 10px 0px 10px;
-            border-radius: 25px 25px 25px 0px;
-            background-color: #29272f;
-            background-image: url(/media/textures/grain-texture2.png);
+        .listing-media {
+            width: 100%;
+            height: 55%;
+            border-radius: 25px;
+            background-color: #F2F2F2;
+            background-image: url(/media/textures/grain-texture-light.png);
             background-repeat: repeat;
             background-size: contain;
             background-size: 100px;
-            position: relative;
 
-            .listing-media {
+            img {
                 width: 100%;
-                height: 55%;
+                height: 100%;
+                object-fit: cover;
                 border-radius: 25px;
-                background-color: #F2F2F2;
-                background-image: url(/media/textures/grain-texture-light.png);
-                background-repeat: repeat;
-                background-size: contain;
-                background-size: 100px;
-
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    border-radius: 25px;
-                }
             }
+        }
 
-            .listing-details {
-                height: 30%;
-                margin-left:10px;
-                margin-top: 0px;
-                padding-top: 0px;
-                overflow: hidden;
-            }
+        .listing-details {
+            height: 30%;
+            margin-left:10px;
+            margin-top: 0px;
+            padding-top: 0px;
+            overflow: hidden;
+        }
 
-            .listing-title {
-                font-size: 1.3vw;
-                margin-top: 0px;
-                padding-top: 0px;
-            }
+        .listing-title {
+            font-size: 1.3vw;
+            margin-top: 0px;
+            padding-top: 0px;
+        }
 
-            .listing-description {
-                font-size: 1vw;  
-                margin-top: 0px;
-                padding-top: 0px;              
-            }
+        .listing-description {
+            font-size: 1vw;  
+            margin-top: 0px;
+            padding-top: 0px;              
+        }
 
-            .total-bids {
-                margin-left:10px;
-                position: absolute;
-                bottom: 0;
-                top: 100%;
-                display: flex;
-                align-items: center;
-                height: 55px;
-                width: 196px;
-                font-size: 1.2vw;
-            }
+        .total-bids {
+            margin-left:10px;
+            position: absolute;
+            bottom: 0;
+            top: 100%;
+            display: flex;
+            align-items: center;
+            height: 55px;
+            width: 196px;
+            font-size: 1.2vw;
+        }
+    }
+
+    .listing-content::before {
+        content: "";
+        width: 55%;
+        height: 55px;
+        border-radius: 0px 0px 25px 25px;
+        position: absolute;
+        left: 0;
+        top: 100%;
+        background-color: #29272f;
+        background-image: url(/media/textures/grain-texture2.png);
+        background-repeat: repeat;
+        background-size: contain;
+        background-size: 100px;
+    }
+
+    .listing-content > * {
+        position: relative;
+        z-index: 2;
+    }
+
+    .see-listing {
+        background-color: #81AB76;
+        margin-left: 58%;
+        margin-top: 10px;
+        width: 35%;
+        height: 45px;
+        border: none;
+        border-radius: 0px 25px 25px 25px;
+        font-size: 18px;
+        font-weight: 600;
+
+        i {
+            font-size: 30px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        &:hover {
+            transition: 0.2s;
+            cursor: pointer;
+
+            margin-left: 62%;
+
+            background-color: #D6650F;
+        }
+    }
+
+    &:hover {
+        cursor: pointer;
+        transition: 0.4s;
+
+        .listing-content {
+            background-color: #81AB76;
+            background-image: none;
+            transition: 0.2s;
         }
 
         .listing-content::before {
-            content: "";
-            width: 55%;
-            height: 55px;
-            border-radius: 0px 0px 25px 25px;
-            position: absolute;
-            left: 0;
-            top: 100%;
-            background-color: #29272f;
-            background-image: url(/media/textures/grain-texture2.png);
-            background-repeat: repeat;
-            background-size: contain;
-            background-size: 100px;
-        }
-
-        .listing-content > * {
-            position: relative;
-            z-index: 2;
+            background-color: #81AB76;
+            background-image: none;
+            transition: 0.2s;
         }
 
         .see-listing {
-            background-color: #81AB76;
-            margin-left: 58%;
-            margin-top: 10px;
-            width: 35%;
-            height: 45px;
-            border: none;
-            border-radius: 0px 25px 25px 25px;
-            font-size: 18px;
-            font-weight: 600;
-
-            i {
-                font-size: 30px;
-                width: 100%;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            &:hover {
-                transition: 0.2s;
-                cursor: pointer;
-
-                margin-left: 62%;
-
-                background-color: #D6650F;
-            }
-        }
-
-        &:hover {
-            cursor: pointer;
-            transition: 0.4s;
-
-            .listing-content {
-                background-color: #81AB76;
-                background-image: none;
-                transition: 0.2s;
-            }
-    
-            .listing-content::before {
-                background-color: #81AB76;
-                background-image: none;
-                transition: 0.2s;
-            }
-
-            .see-listing {
-                transition: 0.2s;
-                cursor: pointer;
-
-                margin-left: 62%;
-
-                background-color: #D6650F;
-            }
-        }
-    }
-}
-
-.pagination-controls {
-    margin-top: 120px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 40px;
-
-    span {
-        font-weight: 700;
-        border: solid 1.5px #29272f;
-        background-color: #29272F;
-        color: #F2F2F2;
-        border-radius: 5px;
-        padding: 5px;
-    }
-
-    .prev-button, .next-button {
-        padding: 5px;
-        border: solid 1.5px #29272F;
-        border-radius: 5px;
-        background-color: #EBEEE9;
-        width: 70px;
-
-        &:hover {
-            background-color: #29272F;
-            color: #F2F2F2;
-            cursor: pointer;
             transition: 0.2s;
+            cursor: pointer;
+
+            margin-left: 62%;
+
+            background-color: #D6650F;
         }
     }
-
-    .page-numbers {
-        display: flex;
-        flex-direction: row;
-        gap: 5px;
-        align-items: center;
-        justify-content: center;
-        font-size: 14px;
-    }
 }
-
+/*
 @media (max-width: 1300px) {
     .all-listings {
         .listing {
@@ -516,7 +350,7 @@
         gap: 10px;
     }
 }
-
+*/
 
 
 
