--- a/src/css/profile/profile-info.css
+++ b/src/css/profile/profile-info.css
@@ -46,8 +46,8 @@ h1 {}
         border: solid 1.5px #F2F2F2;
     
         img {
-            width: 150px;
-            height: 150px;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
             border-radius: 999px;
         }
@@ -74,6 +74,9 @@ h1 {}
         .user-bio{
             margin-bottom: 80px;
             width: 85%;
+            background-color: #f2f2f246;
+            padding: 5px;
+            border-radius: 5px;
         }
     }
 
@@ -110,7 +113,6 @@ h1 {}
         border-radius: 10px;
         background-color: #29272F;
         color: #F2F2F2;
-        font-family: "Libre Bodoni", serif;
         font-weight: 600;
 
         &:hover {
