--- a/src/css/listings/create-listing.css
+++ b/src/css/listings/create-listing.css
@@ -1,13 +1,5 @@
 main {
-    height: 100vh;
-    width: 90%;
-    display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 140px;
-    color: #29272F;
 }
 
 .preview-section {
@@ -33,8 +25,7 @@ main {
 
     .preview-media {
         width: 95%;
-        height: 100%;
-        max-height: 450px;
+        height: 65%;        
         margin-top: 0px;
         border-radius: 15px;
         padding: 10px;
@@ -170,4 +161,55 @@ main {
         }
     }
 
+}
+
+@media (max-width: 990px) {
+    main {
+        flex-direction: column;
+    }
+    .preview-section {
+        width: 95%;
+    }
+    .create-section {
+        margin-top: 40px;
+        margin-bottom: 80px;
+        width: 100%;
+        margin-left: 0%;
+        .create-form {
+            input {
+                width: 95%;
+            }
+            textarea {
+                width: 95%;
+            }
+            .ends-at {
+                input{
+                    width: 200px;
+                }
+            }
+        }
+        .submit-button {
+            margin-top: 40px;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .preview-section {
+        width: 100%;
+        height: 600px;
+    }
+    .create-section {
+        h1 {
+            font-size: 25px;
+        }
+        .create-form {
+            input {
+                width: 100%;
+            }
+            textarea {
+                width: 100%;
+            }
+        }
+    }
 }
