--- a/src/css/listings/update-listing.css
+++ b/src/css/listings/update-listing.css
@@ -1,20 +1,10 @@
 main {
-    height: 100vh;
-    width: 90%;
-    display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 140px;
-    color: #29272F;
 }
 
 .preview-section {
-
     width: 40%;
     height: 80vh;
-
 .preview-listing {
     width: 100%;
     height: 100%;
@@ -199,4 +189,55 @@ main {
         }
     }
 
+}
+
+@media (max-width: 990px) {
+    main {
+        flex-direction: column;
+    }
+    .preview-section {
+        width: 95%;
+    }
+    .update-section {
+        margin-top: 40px;
+        margin-bottom: 80px;
+        width: 100%;
+        margin-left: 0%;
+        .update-form {
+            input {
+                width: 95%;
+            }
+            textarea {
+                width: 95%;
+            }
+            .ends-at {
+                input{
+                    width: 200px;
+                }
+            }
+        }
+        .submit-button {
+            margin-top: 40px;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .preview-section {
+        width: 100%;
+        height: 600px;
+    }
+    .update-section {
+        h1 {
+            font-size: 25px;
+        }
+        .update-form {
+            input {
+                width: 100%;
+            }
+            textarea {
+                width: 100%;
+            }
+        }
+    }
 }
