--- a/src/css/listings/update-listing.css
+++ b/src/css/listings/update-listing.css
@@ -22,9 +22,8 @@ main {
     padding-top: 0px;
 
     .preview-media {
-        width: 95%;
-        height: 100%;
-        max-height: 450px;
+        width: 100%;
+        height: 65%;
         margin-top: 0px;
         border-radius: 15px;
         padding: 10px;
@@ -193,7 +192,7 @@ main {
 
 @media (max-width: 990px) {
     main {
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     .preview-section {
         width: 95%;
@@ -215,9 +214,6 @@ main {
                     width: 200px;
                 }
             }
-        }
-        .submit-button {
-            margin-top: 40px;
         }
     }
 }
