--- a/src/css/listings/all-listings.css
+++ b/src/css/listings/all-listings.css
@@ -143,6 +143,47 @@
         }
     }
 }
+
+.tag-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    height: 30px;
+
+    .popular-tags {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        width: 100%;
+        flex-wrap: wrap;
+        align-items: flex-start;
+
+        .tag {
+            height: 100%;
+            width: auto;
+            padding: 5px;
+            padding-left: 7px;
+            padding-right: 7px;
+            border: solid 1.5px #29272F;
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+
+            &:hover {
+                cursor: pointer;
+                background-color: #D6650F;
+                color: #F2F2F2;
+                border-color: #D6650F;
+                transition: 0.2s;
+            }
+        }
+    }
+}
+
 @media (max-width: 1200px) {
     .listing {
         width: calc(47% - 10px);
