checking to see if it is responsive

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -156,257 +156,21 @@
     }
 }
 
-
-/*Middle section responsive*/
-
-/*
-@media (max-width: 1300px) {
-    
-.middle-section {
-    margin-top: 80px;
-    height: 80vh;
-}
-
-.middle-section-title {
-
-    h2 {
-        font-size: 30px;
-    }
-}
-
-.listing-section {
-    height: 450px;
-}
-
-.newest-listings { 
-    margin-left: 75px;
-    margin-right: 75px;
-}
-
-.listing {
-
-    .listing-content {
-        height: 375px;
-
-        .listing-media {
-            height: 225px;
-        }
-
-        .listing-title {
-            font-size: 17px;
-        }
-
-        .description {
-            font-size: 14px;
-        }
-
-        .total-bids {
-            height: 50px;
-            font-size: 17px;
-        }
-    }
-
-    .listing-content::before {
-        height: 50px;
-    }
-
-    .see-listing {
-        height: 45px;
-        margin-top: 5px;
-
-        i {
-            font-size: 30px;
-        }
-    }
-}
-
-}
-
-@media (max-width: 1100px) {
-    
-    .newest-listings { 
-        margin-left: 45px;
-        margin-right: 60px;
-    }
-
-    .listing {
-        width: calc(45% - 20px);
-    }
-
-}
-
-@media (max-width: 700px) {
-    .middle-section-title {
-    
-        h2 {
-            font-size: 25px;
-        }
-    
-        .see-more-link {
-            width: 75px;
-            height: 35px;
-            font-size: 14px;
-    
-            a {
-                gap: 10px;
-            }
-
-            &:hover {
-                width: 95px;
-            }
-        }
-    }
-    .listing {
-        width: 80%;
-        .listing-content {
-            height: 450px;
-            .listing-media {
-                height: 300px;
-            }
-            .listing-details {
-                height: 145px;
-            }
-        }
-    }
-}
-
 @media (max-width: 600px) {
-    .listing {
-        width: 80%;
-        .listing-content {
-            height: 400px;
-            .listing-media {
-                height: 250px;
-            }
-            .listing-details {
-                height: 145px;
-            }
-        }
+    .top-section-border {
+        padding: 0px;
+    }
+    .left-titles {
+        display: none;
+    }
+    .top-section-content-right {
+        margin-top: 0px;
+        top: 0;
+        height: 100%;
+        padding: 0px;
+        margin: 0;
+        min-width: 100%;
     }
 
-    .slider-buttons {
-    
-        .next-left, .next-right{
-            height: 30px;
-            width: 40px;
-        }
-    
-        .next-right {
-            &:hover {
-                margin-right: -10px;
-                transition: 0.2s;
-            }
-        }
-    
-        .next-left{
-            &:hover {
-                margin-left: -10px;
-                transition: 0.2s;
-            }
-        }
-    }
 }
 
-@media (max-width: 450px) {
-    .middle-section-title {
-        h2 {
-            font-size: 20px;
-        }
-    }  
-
-    .listing {
-        width: 90%;
-        .listing-content {
-            height: 375px;
-            .listing-media {
-                height: 225px;
-            }
-            .listing-details {
-                height: 145px;
-            }
-
-            .total-bids {
-                font-size: 14px;
-            }
-    
-            .listing-title {
-                font-size: 14px;
-            }
-    
-            .description {
-                font-size: 12px;
-            }
-        }
-
-        .listing-content::before {
-            width: 65%;
-        }
-
-        .see-listing {
-            width: 35%;
-            margin-left: 75%;
-            i {
-                font-size: 17px;
-            }
-        }
-
-        &:hover {
-
-            .see-listing {
-                margin-left: 79%;
-            }
-        }
-        
-    }
-}
-
-@media (max-width: 350px) {
-    .newest-listings {
-        margin-left: 0px;
-        margin-right: 10px; 
-    }
-
-    .listing {
-        width: 100%;
-        margin-left: 0px;
-        margin-right: 0px;
-        .listing-content {
-            height: 375px;
-            width: 100%;
-            border-radius: 25px 25px 0px 0px;
-        }
-        .listing-content::before {
-            width: 100%;
-        }
-        .see-listing {
-            display: none;
-        }
-    }
-
-    .slider-buttons {
-        align-items: end;
-        height: 90%;
-        width: 45%;
-        margin-left: 50%;
-        transform: translate(-50%);
-        .next-left, .next-right{
-            height: 25px;
-            width: 35px;
-        }
-    
-        .next-right {
-            &:hover {
-                margin-right: -10px;
-                transition: 0.2s;
-            }
-        }
-    
-        .next-left{
-            &:hover {
-                margin-left: -10px;
-                transition: 0.2s;
-            }
-        }
-    }
-}
-*/
